--- a/sonar-project.properties/sonar-project.properties
+++ b/sonar-project.properties/sonar-project.properties
@@ -1,14 +1,14 @@
 sonar.projectKey=PanguiPeguy_SONARQUBE
 sonar.organization=panguipeguy2005
 
+# Configuration minimale nécessaire
+sonar.projectKey=bibliotheque
+sonar.projectName=Bibliotheque Demo
+sonar.projectVersion=1.0
+sonar.sources=src/bibliotheque
 
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=SONARQUBE
-#sonar.projectVersion=1.0
+# Si vous avez compilé votre code
+sonar.java.binaries=target/classes
 
-
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
-
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+# URL du serveur SonarQube (par défaut: http://localhost:9000)
+sonar.host.url=http://localhost:9000
