--- a/sonar-project.properties/sonar-project.properties
+++ b/sonar-project.properties/sonar-project.properties
@@ -1,6 +1,3 @@
-sonar.projectKey=PanguiPeguy_SONARQUBE
-sonar.organization=panguipeguy2005
-
 # Configuration minimale nécessaire
 sonar.projectKey=bibliotheque
 sonar.projectName=Bibliotheque Demo
@@ -11,4 +8,4 @@ sonar.sources=src/bibliotheque
 sonar.java.binaries=target/classes
 
 # URL du serveur SonarQube (par défaut: http://localhost:9000)
-sonar.host.url=http://localhost:9000
+sonar.host.url=https://sonarcloud.io
