--- a/sonar-project.properties/sonar-project.properties
+++ b/sonar-project.properties/sonar-project.properties
@@ -1,11 +1,5 @@
-# Configuration minimale nécessaire
-sonar.projectKey=bibliotheque
-sonar.projectName=Bibliotheque Demo
-sonar.projectVersion=1.0
-sonar.sources=src/bibliotheque
-
-# Si vous avez compilé votre code
-sonar.java.binaries=target/classes
-
-# URL du serveur SonarQube (par défaut: http://localhost:9000)
-sonar.host.url=https://sonarcloud.io
+mvn clean verify sonar:sonar \
+  -Dsonar.projectKey=SONARQUBE \
+  -Dsonar.projectName='SONARQUBE' \
+  -Dsonar.host.url=http://localhost:9000 \
+  -Dsonar.token=sqp_56b048e6a149d217f95053cf26acdc671a8eba29
