--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,5 @@
-sonar.projectKey=PanguiPeguy_SONARQUBE
-sonar.organization=panguipeguy2005
-
-
-# This is the name and version displayed in the SonarCloud UI.
-sonar.projectName=SONARQUBE
-sonar.projectVersion=1.0
-
-
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=src/bibliotheque
-
-# Encoding of the source code. Default is default system encoding
-sonar.sourceEncoding=UTF-8
+mvn clean verify sonar:sonar \
+  -Dsonar.projectKey=SONARQUBE \
+  -Dsonar.projectName='SONARQUBE' \
+  -Dsonar.host.url=http://localhost:9000 \
+  -Dsonar.token=sqp_56b048e6a149d217f95053cf26acdc671a8eba29
